
INCOMPATIBILITY.

* Classical setup: Assumption "m mod d = 0" (for m d :: nat) is no
longer aggresively destroyed to "?q. m = d * q".  INCOMPATIBILITY,
adding "elim!: dvd" to classical proof methods in most situations
restores broken proofs.


*** ML ***

* Operation Export.export emits theory exports (arbitrary blobs), which
are stored persistently in the session build database.


*** System ***

* Settings ISABELLE_PATH and ISABELLE_OUTPUT have been discontinued:
heap images and session databases are always stored in
$ISABELLE_HOME_USER/heaps/$ML_IDENTIFIER (command-line default) or
$ISABELLE_HOME/heaps/$ML_IDENTIFIER (main Isabelle application or
"isabelle jedit -s" or "isabelle build -s").

* The command-line tool retrieves theory exports from the session build
database.

* The command-line tools "isabelle server" and "isabelle client" provide
access to the Isabelle Server: it supports responsive session management
and concurrent use of theories, based on Isabelle/PIDE infrastructure.
See also the "system" manual.

* The command-line tool "isabelle update_comments" normalizes formal
comments in outer syntax as follows: \<comment> \<open>text\<close> (whith a single space to
approximate the appearance in document output). This is more specific
than former "isabelle update_cartouches -c": the latter tool option has
been discontinued.

* Session ROOT entry: empty 'document_files' means there is no document
for this session. There is no need to specify options [document = false]
anymore.

* The command-line tool "isabelle mkroot" now always produces a document
outline: its options have been adapted accordingly. INCOMPATIBILITY.

* The command-line tool "isabelle mkroot -I" initializes a Mercurial
repository for the generated session files.

* Linux and Windows/Cygwin is for x86_64 only. Old 32bit platform
support has been discontinued.

* Mac OS X 10.10 Yosemite is now the baseline version; Mavericks is no
longer supported.
